install/addons/syndesis-todo-1-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: syndesis
    syndesis.io/app: todo
    syndesis.io/component: todo
    syndesis.io/addon: todo
  name: todo
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: syndesis
    syndesis.io/app: todo
    syndesis.io/component: todo
